@@ -40,23 +40,29 @@
 package fish.payara.microprofile.openapi.impl.model.security;
 
 import static fish.payara.microprofile.openapi.impl.model.util.ModelUtils.createList;
+import static fish.payara.microprofile.openapi.impl.model.util.ModelUtils.createMap;
 import static fish.payara.microprofile.openapi.impl.model.util.ModelUtils.readOnlyView;
 
+import com.fasterxml.jackson.annotation.JsonAnyGetter;
+import com.fasterxml.jackson.annotation.JsonAnySetter;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonInclude;
 import fish.payara.microprofile.openapi.api.visitor.ApiContext;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.eclipse.microprofile.openapi.models.security.SecurityRequirement;
 import org.glassfish.hk2.classmodel.reflect.AnnotationModel;
 
-public class SecurityRequirementImpl extends LinkedHashMap<String, List<String>> implements SecurityRequirement {
+public class SecurityRequirementImpl implements SecurityRequirement {
 
     private static final long serialVersionUID = -677783376083861245L;
+
+    @JsonIgnore
+    private Map<String, List<String>> contents = createMap();
 
     public static SecurityRequirement createInstance(AnnotationModel annotation, ApiContext context) {
         SecurityRequirement from = new SecurityRequirementImpl();
@@ -83,43 +89,61 @@ public class SecurityRequirementImpl extends LinkedHashMap<String, List<String>>
         super();
     }
 
-    public SecurityRequirementImpl(Map<? extends String, ? extends List<String>> items) {
-        super(items);
-    }
-
     @Override
     public SecurityRequirement addScheme(String name, String item) {
-        this.put(name, item == null ? createList() : Arrays.asList(item));
-        return this;
+        if (item == null) {
+            return addScheme(name, createList());
+        }
+        return addScheme(name, List.of(item));
     }
 
     @Override
     public SecurityRequirement addScheme(String name, List<String> item) {
-        this.put(name, item == null ? createList() : item);
+        if (item == null) {
+            item = createList();
+        }
+        if (contents == null) {
+            contents = createMap();
+        }
+
+        contents.put(name, item);
         return this;
     }
 
     @Override
     public SecurityRequirement addScheme(String name) {
-        this.put(name, createList());
-        return this;
+        return addScheme(name, createList());
     }
 
     @Override
     public void removeScheme(String securitySchemeName) {
-        this.remove(securitySchemeName);
+        if (contents != null) {
+            contents.remove(securitySchemeName);
+        }
     }
 
     @Override
+    @JsonAnyGetter
+    @JsonInclude(value = JsonInclude.Include.NON_ABSENT, content = JsonInclude.Include.NON_ABSENT)
     public Map<String, List<String>> getSchemes() {
-        return readOnlyView(this);
+        return readOnlyView(contents);
     }
 
     @Override
     public void setSchemes(Map<String, List<String>> items) {
-        clear();
+        contents = createMap();
         if (items != null) {
-            putAll(items);
+            contents.putAll(items);
+        }
+    }
+
+    @JsonAnySetter
+    public void addAnyScheme(String name, Object item) {
+        if (item instanceof String schemeName) {
+            addScheme(name, schemeName);
+        }
+        else if (item instanceof List<?> schemeNames) {
+            addScheme(name, schemeNames.stream().map(Object::toString).toList());
         }
     }
 
